--- a/cloudformation-templates/pattern-1/pattern-1-cloudformation.template.yml
+++ b/cloudformation-templates/pattern-1/pattern-1-cloudformation.template.yml
@@ -98,7 +98,7 @@ Parameters:
     MinLength: 6
     ConstraintDescription: minimum - 6 characters
   DBClass:
-    Default: db.t2.micro
+    Default: db.t2.medium
     Description: Database instance class
     Type: String
     AllowedValues:
