--- a/infrastructure-build-plans/single-node-infra.yaml
+++ b/infrastructure-build-plans/single-node-infra.yaml
@@ -49,11 +49,11 @@ scenarioConfig:
     name: scenario05
     description: 'API Versioning'
     dir: scenario05
-  -
-    name: scenario06
-    description: 'API Governance'
-    dir: scenario06
-  -
-    name: scenario09
-    description: 'Developer Enablement and Community Building'
-    dir: scenario09
+#  -
+#    name: scenario06
+#    description: 'API Governance'
+#    dir: scenario06
+#  -
+#    name: scenario09
+#    description: 'Developer Enablement and Community Building'
+#    dir: scenario09
