--- a/cloudformation-templates/pattern-1/pattern-1-cloudformation.template.yml
+++ b/cloudformation-templates/pattern-1/pattern-1-cloudformation.template.yml
@@ -591,7 +591,7 @@ Outputs:
   gwMgrHost:
     Value: !Sub '${WSO2EnvAPIMApplicationLoadBalancer.DNSName}'
     Description: DNS Name of the ALB fronting WSO2 APIM Instance
-  gwMgrHost:
+  gwMgrPort:
     Value: 443
     Description: Listening Port of ALB fronting WSO2 APIM Instance
   gwWrkHost:
